--- a/client/src/app/public/contact/containers/contact.component.html
+++ b/client/src/app/public/contact/containers/contact.component.html
@@ -3,7 +3,7 @@
   <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2 class="contact-title">Get in Touch</h2>
+      <h2 class="contact-title" i18n>Get in Touch</h2>
     </div>
     <div class="col-lg-8">
       <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
@@ -11,26 +11,26 @@
         <div class="row">
           <div class="col-12 form-group">
                   <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
-                            placeholder="Enter Message"></textarea>
+                            i18n-placeholder placeholder="Enter Message"></textarea>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
-              <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name">
+              <input class="form-control" name="name" id="name" type="text" i18n-placeholder placeholder="Enter your name">
             </div>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
-              <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address">
+              <input class="form-control" name="email" id="email" type="email" i18n-placeholder placeholder="Enter email address">
             </div>
           </div>
           <div class="col-12">
             <div class="form-group">
-              <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject">
+              <input class="form-control" name="subject" id="subject" type="text" i18n-placeholder placeholder="Enter Subject">
             </div>
           </div>
         </div>
         <div class="form-group mt-3">
-          <button type="submit" class="button button-contactForm">Send Message</button>
+          <button type="submit" class="button button-contactForm" i18n>Send Message</button>
         </div>
       </form>
     </div>
@@ -38,22 +38,20 @@
       <div class="media contact-info">
         <span class="contact-info__icon"><i class="ti-home"></i></span>
         <div class="media-body">
-          <h3>📍 Buttonwood, California.</h3>
-          <p>Rosemead, CA 91770</p>
+          <h3 i18n>📍 Spain.</h3>
         </div>
       </div>
       <div class="media contact-info">
         <span class="contact-info__icon"><i class="ti-tablet"></i></span>
         <div class="media-body">
-          <h3>☎️ <a href="tel:454545654">00 (440) 9865 562</a></h3>
-          <p>Mon to Fri 9am to 6pm</p>
+          <h3>☎️ <a href="tel:666666666" i18n>Not available yet</a></h3>
         </div>
       </div>
       <div class="media contact-info">
         <span class="contact-info__icon"><i class="ti-email"></i></span>
         <div class="media-body">
-          <h3>📩 <a href="mailto:support@colorlib.com">support@colorlib.com</a></h3>
-          <p>Send us your query anytime!</p>
+          <h3>📩 <a href="mailto:mysuitcase@gmail.com">mysuitcase@gmail.com</a></h3>
+          <p i18n>Send us your query anytime!</p>
         </div>
       </div>
     </div>
