--- a/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
+++ b/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
@@ -85,8 +85,9 @@
   </form>
 </div>
 <mat-progress-bar
+  class="text-start"
   [color]="color"
   [mode]="mode"
   [value]="progressBarValue"
-  [bufferValue]="100">
+  [bufferValue]=100>
 </mat-progress-bar>
