--- a/src/app/core/settings/containers/settings.component.html
+++ b/src/app/core/settings/containers/settings.component.html
@@ -1,6 +1,6 @@
 <navbar-component></navbar-component>
 
-<form class="form-settings form-contact col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
+<form class="form-settings form-contact col-sm-10 col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
     <div class="search-wrapper">
         <div class="modify-buttons">
             <button class="button edit-button" (click)="toggleEditMode()">
@@ -22,7 +22,7 @@
           <div class="form-group">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n="@@name">Name</mat-label>
-              <input type="text" matInput formControlName="name" placeholder="Introduce tu nombre de usuario">
+              <input type="text" matInput autocomplete="off" formControlName="name" placeholder="Introduce tu nombre de usuario">
               <mat-error *ngIf="settingsForm.get('name').hasError('required')" i18n>
                 The field name is <strong>required</strong>
               </mat-error>
@@ -31,7 +31,7 @@
           <div class="form-group">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n="@@email">Email</mat-label>
-              <input type="email" matInput formControlName="email" placeholder="Introduce email">
+              <input type="email" matInput autocomplete="off" formControlName="email" placeholder="Introduce email">
               <mat-error *ngIf="settingsForm.get('email').hasError('email') && !settingsForm.get('email').hasError('required')" i18n>
                 The email format is not valid
               </mat-error>
@@ -44,13 +44,13 @@
           <div class="form-group" [formGroup]="passwordForm">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i81n>Current password</mat-label>
-              <input type="password" matInput formControlName="password" placeholder="*******">
+              <input type="password" matInput autocomplete="off" formControlName="password" placeholder="*******">
               <mat-icon *ngIf="settingsForm.enabled" (click)="enableChangePassword()" class="button-in-input" matSuffix i18n-matTooltip matTooltip="I want to change the password">mode_edit</mat-icon>
-              <mat-error *ngIf="passwordForm.get('password').hasError('required')" class="mat-error--with-details"- i18n>
+              <mat-error *ngIf="passwordForm.get('password').hasError('required')" class="mat-error--with-details" i18n>
                 The field pasword is <strong>required</strong>
               </mat-error>
               <mat-error *ngIf="!passwordForm.get('password').hasError('required') && passwordForm.get('password').hasError('forbiddenPassword')" class="mat-error--with-details" i18n="@@pass_requirements-error">
-                The field password <strong>does not match the requirements</strong>. You can check this requirements in the detail´s dropdown.
+                The field password <strong>does not match the requirements</strong>.
               </mat-error>
             </mat-form-field>
             <details class="details">
@@ -59,11 +59,11 @@
 
             <mat-form-field *ngIf="showPasswordChange" class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
               <mat-label i18n>Introduce the new password</mat-label>
-              <input type="password" matInput formControlName="newPassword" placeholder="*******">  
+              <input type="password" matInput autocomplete="off" formControlName="newPassword" placeholder="*******">  
               <mat-error *ngIf="passwordForm.get('newPassword').hasError('required')" i18n>
-                The field pasword is <strong>required</strong>. If you do not wish the password change, please desactive this option
+                The field pasword is <strong>required</strong>.
               </mat-error>
-              <mat-error *ngIf="passwordForm.get('newPassword').hasError('forbiddenPassword')" i18n="@@pass_requirements-error">
+              <mat-error *ngIf="!passwordForm.get('newPassword').hasError('required') && passwordForm.get('newPassword').hasError('forbiddenPassword')" i18n="@@pass_requirements-error">
                 The field password <strong>does not match the requirements</strong>. You can check this requirements in the detail´s dropdown.
               </mat-error>
             </mat-form-field>
@@ -71,25 +71,26 @@
 
           <div *ngIf="settingsForm.enabled" class="extra-fields-explanation">
             <h4 i18n>Other data</h4>
-            <small><a href="javascript:void(0)" (click)="openExtraDataExp()" class="nav-link" role="button" aria-haspopup="true"
-              aria-expanded="false" i18n>I want to know why these extra data is needed to make a list to pack a suitcase.</a></small>
+            <small>
+              <a href="javascript:void(0)" (click)="openExtraDataExp()" class="nav-link" role="button" aria-haspopup="true"
+              aria-expanded="false" i18n>I want to know why these extra data is needed to make a list to pack a suitcase.</a>
+            </small>
           </div>
 
           <div class="form-group">
             <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
-              <mat-label i18n>Age</mat-label>
+              <mat-label i18n>Age (Optional)</mat-label>
               <input type="number" matInput formControlName="age" i18n-placeholder placeholder="Introduce your age">
-              <mat-hint i18n="@@optional">Optional</mat-hint>
+              
             </mat-form-field>
           </div>
 
           <div class="form-group" [ngClass]="{'form-group--enabled': settingsForm.enabled}">
-            <mat-label class="gender-label" i18n>Gender</mat-label>
+            <mat-label class="gender-label" i18n>Gender (Optional)</mat-label>
             <mat-radio-group formControlName="gender" class="radio-group" aria-label="Gender">
               <mat-radio-button value="true" i18n>Male</mat-radio-button>
               <mat-radio-button value="false" i18n>Female</mat-radio-button>
             </mat-radio-group>
-            <small class="small-hint" i18n="@@optional">Optional</small>
           </div>
         </div>      
     </div>
