fix style in not found screen

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,17 +1,5 @@
-<header class="header_area">
-  <div class="main_menu">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container box_1620">
-        <!-- <a class="navbar-brand logo_h" href="index.html"><img src="assets/img/logo.png" alt=""></a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
-<section class="hero-banner magic-ball">
-  <div class="container">
-
+<section class="hero-banner">
+  <div class="container mt-4">
     <div class="row align-items-center text-center text-md-left">
       <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
         <h1 i18n>404: Page not found</h1>
