fix style issues

--- a/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -1,8 +1,10 @@
+@import "./../../../../../scss/_variables";
+
 :host {
   display: inline-block;
   width: 100%;
-  min-height: 90px;
-  margin-bottom: 20px;
+  min-height: calc(#{$min-header-height} - #{$default-padding});
+  margin-bottom: $default-padding;
 }
 
 .logo {
