--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -45,6 +45,8 @@ $white: #fff;
   cursor: pointer;
 }
 
+$default-padding: 20px;
+$min-header-height: 110px;
 $max-footer-height: 175px;
 $max-footer-height-full-screen: 140px;
 
