--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -9,6 +9,10 @@ $margin: 15px;
   margin-bottom: 20px;
 }
 
+.full-screen {
+  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
+}
+
 .weather-panel-wrapper {
   border: solid 1px black;
   box-shadow: inset 0 0 10px $black;
