--- a/src/app/public/home/containers/home/home.component.scss
+++ b/src/app/public/home/containers/home/home.component.scss
@@ -3,7 +3,7 @@
 :host {display: inline-block; width: 100%; height: 100%}
 
 .full-screen {
-  height: calc(100% - #{$max-footer-height});
+  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
 }
 
 .container, .row {
