--- a/src/app/public/register/containers/register.component.html
+++ b/src/app/public/register/containers/register.component.html
@@ -16,7 +16,7 @@
         <input type="password" class="form-control" id="password" i18n-placeholder placeholder="Introduce your password"
           formControlName="password">
         <details class="details">
-          <small id="passwordHelp" class="form-text text-muted" i18n="@@pass_requirements">The password must contain between 6 and 20 characters and include 1 lowercase, 1 capitalcase, 1 number and 1 special character</small>
+          <small id="passwordHelp" class="form-text text-muted" i18n="@@pass_requirements">Password must contain between 6 and 20 characters and include 1 lowercase, 1 capitalcase, 1 number and 1 special character</small>
         </details>
         <label for="passwordConfirmation" i18n>Repit the password</label>
         <input type="password" class="form-control" id="passwordConfirmation" i18n-placeholder placeholder="Repit the password"
