fix paths for images

--- a/src/app/core/login/containers/login.component.html
+++ b/src/app/core/login/containers/login.component.html
@@ -37,7 +37,7 @@
       </ng-template>
     </small>
   </div>
-  <img class="login-img" alt="login image" src="../../../../assets/img/login/undraw_travelers.svg">
+  <img class="login-img" alt="login image" src="assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
