--- a/src/app/public/home/containers/overview/overview.component.html
+++ b/src/app/public/home/containers/overview/overview.component.html
@@ -7,32 +7,32 @@
           <div class="overview-card" [ngSwitch]="suitcaseList[i].icon">
             <!--mountain-->
             <ng-container *ngSwitchCase="'mountain'">
-              <img class="card-img" src="../../../../../assets/img/categories/mountain.gif" alt="">
+              <img class="card-img" src="assets/img/categories/mountain.gif" alt="">
             </ng-container>
 
             <!--beach-->
             <ng-container *ngSwitchCase="'beach'">
-              <img class="card-img" src="../../../../../assets/img/categories/beach.gif" alt="">
+              <img class="card-img" src="assets/img/categories/beach.gif" alt="">
             </ng-container>
 
             <!--baby-->
             <ng-container *ngSwitchCase="'baby'">
-              <img class="card-img" src="../../../../../assets/img/categories/baby2.gif" alt="">
+              <img class="card-img" src="assets/img/categories/baby2.gif" alt="">
             </ng-container>
 
             <!--pet-->
             <ng-container *ngSwitchCase="'pet'">
-              <img class="card-img" src="../../../../../assets/img/categories/pet.jpeg" alt="">
+              <img class="card-img" src="assets/img/categories/pet.jpeg" alt="">
             </ng-container>
 
             <!--sport-->
             <ng-container *ngSwitchCase="'sport'">
-              <img class="card-img" src="../../../../../assets/img/categories/sport.gif" alt="">
+              <img class="card-img" src="assets/img/categories/sport.gif" alt="">
             </ng-container>
 
             <!--others-->
             <ng-container *ngSwitchDefault>
-              <img class="card-img" src="../../../../../assets/img/blog/blog-3.png" alt="">
+              <img class="card-img" src="assets/img/blog/blog-3.png" alt="">
             </ng-container>
 
             <div class="overview-card-overlay">
@@ -68,32 +68,32 @@
           <div class="overview-card" [ngSwitch]="suitcaseList[i+1].icon">
             <!--mountain-->
             <ng-container *ngSwitchCase="'mountain'">
-              <img class="card-img" src="../../../../../assets/img/categories/mountain.gif" alt="">
+              <img class="card-img" src="assets/img/categories/mountain.gif" alt="">
             </ng-container>
 
             <!--beach-->
             <ng-container *ngSwitchCase="'beach'">
-              <img class="card-img" src="../../../../../assets/img/categories/beach.gif" alt="">
+              <img class="card-img" src="assets/img/categories/beach.gif" alt="">
             </ng-container>
 
             <!--baby-->
             <ng-container *ngSwitchCase="'baby'">
-              <img class="card-img" src="../../../../../assets/img/categories/baby2.gif" alt="">
+              <img class="card-img" src="assets/img/categories/baby2.gif" alt="">
             </ng-container>
 
             <!--pet-->
             <ng-container *ngSwitchCase="'pet'">
-              <img class="card-img" src="../../../../../assets/img/categories/pet.jpeg" alt="">
+              <img class="card-img" src="assets/img/categories/pet.jpeg" alt="">
             </ng-container>
 
             <!--sport-->
             <ng-container *ngSwitchCase="'sport'">
-              <img class="card-img" src="../../../../../assets/img/categories/sport.gif" alt="">
+              <img class="card-img" src="assets/img/categories/sport.gif" alt="">
             </ng-container>
 
             <!--others-->
             <ng-container *ngSwitchDefault>
-              <img class="card-img" src="../../../../../assets/img/blog/blog-3.png" alt="">
+              <img class="card-img" src="assets/img/blog/blog-3.png" alt="">
             </ng-container>
 
             <div class="overview-card-overlay">
