--- a/src/app/public/home/containers/home/home.component.html
+++ b/src/app/public/home/containers/home/home.component.html
@@ -25,7 +25,7 @@
   <section class="section-margin generic-margin trip-type__container">
     <div class="container">
       <div class="section-intro text-center pb-90px">
-        <!--<img class="section-intro-img" src="../../../../../assets/img/logo/logo.png" alt="">-->
+        <!--<img class="section-intro-img" src="assets/img/logo/logo.png" alt="">-->
         <h2 i18n>What is your favourite trip?</h2>
       </div>
       <div class="row">
