--- a/src/app/public/home/containers/home/home.component.html
+++ b/src/app/public/home/containers/home/home.component.html
@@ -6,8 +6,8 @@
     <div class="container">
       <div class="row align-items-center text-center text-md-left">
         <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
-          <h1 i18n>Forget about missing things for your next trip at home</h1>
-          <p i18n>Packing has always been the most boring part of the trip. With <i>Mysuitcase</i> we help you to optimize this process to not let you forget anything in your next trip. ¿Why loosing time with things that dont require it?</p>
+          <h1 i18n>Forget about missing things for your next trip</h1>
+          <p i18n>Packing has always been the most boring part of the trip. With <i>Mysuitcase</i> we help you to optimize this process to not let you forget anything in your next trip. Why loosing time with things that dont require it?</p>
           <button class="button button-hero mt-4" (click)="goTo('login')" i18n>Login/Sign Up</button>
         </div>
         <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
@@ -72,7 +72,7 @@
               </svg>
             </div>
             <div class="service-card-body">
-              <h3 i18n>¿Sun, beach?</h3>
+              <h3 i18n>Sun, beach?</h3>
               <p i18n>Some days to rest and to sunbath in a dreamed beach is never a bad idea.
               </p>
             </div>
@@ -97,7 +97,7 @@
               </svg>
             </div>
             <div class="service-card-body">
-              <h3 i18n>¿Turism, culture?</h3>
+              <h3 i18n>Turism, culture?</h3>
               <p i18n>If you love finding out new the historic city centers all around the world, this is your trip</p>
             </div>
           </div>
