--- a/src/app/core/login/containers/login.component.scss
+++ b/src/app/core/login/containers/login.component.scss
@@ -18,10 +18,12 @@
 
 .hint-password {
   margin-top: 20px;
+  max-height: 50;
+  overflow-y: scroll;
 }
 
 .form-check {
-  margin-top: 50px;
+  margin-top: 60px;
   display: flex;
   padding: 0;
   align-items: center;
