--- a/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/src/app/core/shared/navbar/containers/navbar.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg ">
       <div class="container box_1620">
         <a class="navbar-brand" (click)="goHome()"><img class ="logo" src="assets/img/logo/logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -16,9 +16,9 @@
             <li class="nav-item active"><a i18n-matTooltip matTooltip="Inform us regarding any incident or suggestion" class="nav-link" [routerLink]="['/contact']" i18n>Contact</a></li>
             <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a i18n-matTooltip matTooltip="Manage your profile and other settings" class="nav-link" [routerLink]="['/settings']" i18n>Profile</a></li>
             <li class="nav-item active"><a i18n-matTooltip matTooltip="Subscribe to be up to date by retriving all the notifications" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'" i18n>Subscribe</a></li>
+            <li class="nav-item active"><a i18n-matTooltip="@@English" matTooltip="English" class="nav-link" href="/" i18n="@@English">English <img class="lang-img lang-img--small" alt="UK flag" src="assets/img/lang/uk-flag-icon.png"></a></li>
+            <li class="nav-item active"><a i18n-matTooltip="@@Spanish" matTooltip="Spanish" matTooltipPosition="below" class="nav-link" href="/es" i18n="@@Spanish">Spanish <img class="lang-img lang-img--small" alt="Spain flag" src="assets/img/lang/spain-flag-icon.png"></a></li>
             <li *ngIf="loginService.isLoggedIn()" class="nav-item active" (click)="logout()"><a i18n-matTooltip matTooltip="Log out" class="nav-link" i18n>Logout</a></li>
-            <li><a i18n-matTooltip="@@English" matTooltip="English" class="nav-link" href="/" i18n="@@English">English</a></li>
-            <li><a i18n-matTooltip="@@Spanish" matTooltip="Spanish" class="nav-link" href="/es" i18n="@@Spanish">Spanish</a></li>
           </ul>
           <ul class="nav navbar-nav menu_nav menu_nav--icons justify-content-end">
             <li *ngIf="(loginService.logged$ | async) && (loginService.logged$ | async).admin!" class="nav-item active" [routerLink]="['/admin']" routerLinkActive="active-link"><a i18n-matTooltip matTooltip="Admin area" class="nav-link"><mat-icon>admin_panel_settings</mat-icon></a></li>
