--- a/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -44,4 +44,20 @@
 .lang-img {
   width: 40px;
   height: 40px;
+
+  &.lang-img--small {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#navbarSupportedContent::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#navbarSupportedContent {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
