make recommendation list scrollable

--- a/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/src/app/public/create-suitcase/create-suitcase.component.html
@@ -21,8 +21,8 @@
     </form>
   </div>
 
-  <div class="row">
-    <div class="col-lg-4 col-sm-6">
+  <div class="row columns-row">
+    <div class="col-lg-4 col-sm-6 suggestion-column">
       <div class="card">
         <div class="card-header suggestion-header" *ngIf="suggestionList">
           <mat-icon matSuffix matTooltip="Suggestions" [matTooltipPosition]="'below'">emoji_objects</mat-icon>
