--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,7 +19,7 @@ $tertiary-color: #394359;
 $link-color-secondary: #007bff;
 
 $error-color: #c2483d;
-$success-color: #2d6339;
+$success-color: seagreen;
 
 
 $black: #242429;
