--- a/src/app/public/home/containers/home/home.component.html
+++ b/src/app/public/home/containers/home/home.component.html
@@ -212,13 +212,13 @@
   <section id="notifications" class="section-padding notification__container">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-md-6 align-self-center about-content">
+        <div class="col-lg-6 col-md-6 align-self-center about-content">
           <h2 i18n>Keep toned by using notifications.</h2>
           <p i18n>If you would like to know all the latest news and features that we are steadily releasing in <i>mySuitcase</i>,
             just let us know by activating the notifications.</p>
-          <web-notification-subscriber></web-notification-subscriber>
+          <web-notification-subscriber class="notification__button-container"></web-notification-subscriber>
         </div>
-        <div class="col-lg-7 col-md-6 mb-4 mb-md-0 notification__img-container">
+        <div class="col-lg-6 col-md-6 col-sm-10 mb-4 mb-md-0 notification__img-container">
           <img class="img-fluid" src="assets/img/notifications/notifications.jpg" alt="">
         </div>
       </div>
