add data in footer

--- a/src/app/core/shared/footer/containers/footer.component.html
+++ b/src/app/core/shared/footer/containers/footer.component.html
@@ -4,12 +4,13 @@
     <div class="footer-bottom">
       <div class="row align-items-center">
         <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
-          Copyright MySuitcase ©
-          <script type="text/javascript">document.write(new Date().getFullYear());</script>2020 All rights reserved |
+          Copyright MySuitcase © {{fullYear}}
+          <span i18n>All rights reserved</span>  |
+          <span i18n>Website made by </span><a href="http://www.linkedin.com/in/alejandro-mg-026a2a2b" target="_blank">Alejandro Manso</a> |
           Template by <a href="https://colorlib.com" target="_blank">Colorlib</a> |
-          <a href="">Terms of use</a> |
+          <!-- <a href="">Terms of use</a> | -->
           <a href="">Privacy Policy</a> |
-          <a href="">Cookies policy</a>
+          <!-- <a href="">Cookies policy</a> -->
         </p>
         <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
